--- a/WeatherApp/src/App.css
+++ b/WeatherApp/src/App.css
@@ -1,59 +1,145 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
   text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  height: 34px;
+ display: flex;
+ justify-content: start;
+  width:40px;
+  padding-right: 200px;
+  margin-bottom: 1%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+h1{
+  background-color: white;
+}
+#nowrap{
+  white-space: nowrap;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: em;
+#nav{
+ 
+  background-color: #ffffff;
+  width: 100%;
+  justify-content: end;
+  padding-right: 7%;
 }
 
 .read-the-docs {
-  color: #888;
+  color: #535151;
 }
 .error{
   color:red;
 }
-.container{
-  padding: 30px;
-  border: solid black ;
-  backdrop-filter: blur(100%);
-  margin-right: 10%;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px 0 rgba(86, 161, 177, 0.66), 0 6px 20px 0 rgb(117, 198, 194);
+
+.searchT{
+  margin-top: 2%;
+ padding:10px;
+ width: 38%;
+  align-self: center;
+ border-radius: 50px;
+ text-align: center;
+ background-color: #eeeaeacf;
+ color:black;
 }
-.T-box{
-  margin-right: 7px;
-  padding:2%;
-  border-radius: 20px;
+.bigfont{
+  font-size: 150px;
+   font-family: 'Flamenco';
+  font-style: normal;
+}
+#litefont{
+  font-size: 130px;
+  line-height: 60px;
+  color: #0000007d;
+  font-weight: 1;
+  margin-top: 10%;
+  
+}
+.icon{
+  width:280px;
+}
+#centerB{
+  width: 100%;
+}
+#firstG{
+ text-align: left;
+ margin-left: 10%;
+}
+#secG{
+  text-align: left;
+  
+}
+#litefont{
+ text-align: left;
 }
 
+.centerBot{
+margin-left: 10%;
+}
+.content1{
+  background-color: #f3f0f068;
+  width: 100%;
+}
+body{
+height:auto;
+width: 100vw;
+}
+.slash{
+  width: 20px;
+  object-fit:fill;
+  height:200px;
+  transform: rotate(16deg);
+  margin-bottom: 80pX;
+}
+.slashDownFont{
+  font-size: 100px;
+   font-family: 'Flamenco';
+  font-weight: 100 ;
+  color:dimgray;
+}
+
+#HPSD{
+  margin-left: 15%;
+  margin-right: 25%;
+
+}
+#rightLine{
+  border-right: solid rgb(189, 185, 185);
+  border-right-width: 1px;
+  white-space:nowrap;
+  font-size: 26px;
+  font-family: 'Flamenco';
+  font-size: 30px; 
+  color: black;
+}
+
+.mention{
+  color:#5a5858;
+  font-family:'Flamenco';
+  font-weight: bolder;
+}
+
+.subTit{
+  margin-top: 7%;
+  font-size: 30px;
+  margin-bottom: 2%;
+}
+.card{
+
+  background-color: white;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 5%;
+}
+
+.static{
+  font-size:30px;
+}
+.CTemp{
+ font-family:'Flamenco';
+ font-size: 40px;
+ font-weight: bolder;
+}
