--- a/WeatherApp/src/index.css
+++ b/WeatherApp/src/index.css
@@ -1,11 +1,11 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image:linear-gradient(to top right,white,rgba(194, 92, 194, 0.973),rgb(113, 113, 224),rgb(221, 202, 205));
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,9 +25,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #ffffff;
 }
 
 h1 {
@@ -56,7 +54,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #ffffff;
     background-color: #ffffff;
   }
   a:hover {
