--- a/WeatherApp/src/index.css
+++ b/WeatherApp/src/index.css
@@ -1,12 +1,11 @@
-:root {
+#root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   
-
+  font-weight: 400;
+  background-color: rgb(244, 242, 242);
+  color-scheme: light dark;
+  color: rgba(0, 0, 0, 0.87);
+  width: 100vw;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -25,7 +24,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  background-color: #ffffff;
+  place-items: center;
+  width: 100%;
 }
 
 h1 {
@@ -40,7 +40,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -54,7 +54,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #ffffff;
+    color: #213547;
     background-color: #ffffff;
   }
   a:hover {
